--- a/index.html
+++ b/index.html
@@ -18,7 +18,28 @@
         </div>
     </div>
     <div class="game-container">
-        Let's Play
+        <div class="header">Let's Play</div>
+        <div class="content">
+            <div class="player">
+                <div class="first">Player 1</div>
+                <span class="score">0</span>
+            </div>
+            <div class="board">
+                <div class="space" data-index="0"></div>
+                <div class="space" data-index="1"></div>
+                <div class="space" data-index="2"></div>
+                <div class="space" data-index="3"></div>
+                <div class="space" data-index="4"></div>
+                <div class="space" data-index="5"></div>
+                <div class="space" data-index="6"></div>
+                <div class="space" data-index="7"></div>
+                <div class="space" data-index="8"></div>
+            </div>
+            <div class="player">
+                <div class="second">Player 2</div>
+                <span class="score">0</span>
+            </div>
+        </div>
     </div>
 
     <script src="main.js"></script>
