end of game modal displayed and end of game check

--- a/index.html
+++ b/index.html
@@ -18,6 +18,15 @@
         </div>
     </div>
     <div class="game-container">
+        <div class="modal">
+            <div class="modal-content">
+                <span class="modal-text"></span>
+                <div class="button-container">
+                    <button class="modal-button">Return to Main</button>
+                    <button class="modal-button">Restart Game</button>
+                </div>
+            </div>
+        </div>
         <div class="header">Let's Play</div>
         <div class="content">
             <div class="player">
