game complete pvp

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
             <div class="modal-content">
                 <span class="modal-text"></span>
                 <div class="button-container">
-                    <button class="modal-button">Return to Main</button>
-                    <button class="modal-button">Restart Game</button>
+                    <button class="modal-button main-menu">Return to Main</button>
+                    <button class="modal-button restart">Restart Game</button>
                 </div>
             </div>
         </div>
